--- a/medpredictor/medpredictor-app/medpredapp/templates/home.html
+++ b/medpredictor/medpredictor-app/medpredapp/templates/home.html
@@ -1,14 +1,18 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <title>Medpredictor App</title>
     <link rel="icon" type="image/x-icon" href="{% static 'images/medpredictor_icon.png' %}"> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<body class="flex items-center justify-center min-h-screen bg-white" style="height: 100%;">
+    <div class="bg-black text-white border-2 px-5 py-3 rounded-xl flex flex-col gap-y-5 w-3/4 md:w-1/2 max-w-md box-border">
+        <h1 class="text-center text-3xl">Welcome to Medpredictor App!</h1>
+        <p class="text-justify"></p>
+        <button class="p-2 px-10 border-2 mx-auto hover:bg-green-600 hover:text-gray-200 hover:border-white border-gray-200 rounded">Begin</button>
+    </div>
 </body>
 </html>
